[web] 优化